# cyclone

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
include/: core.h  cube_program.h  particle.h  precision.h  triangle_program.h
include/cyclone/: core.h  particle.h  precision.h
include/graphics/: camera.h  matrix4.h  pipeline.h  program.h
src/: app.cpp  app.h  cube_program.cpp  main.cpp  particle.cpp  triangle_program.cpp
src/demos/fireworks/: fireworks.cpp  fireworks.h
src/graphics/: camera.cpp  matrix4.cpp  pipeline.cpp  program.cpp
src/shaders/: cube.frag  cube.vert  triangle.frag  triangle.vert  vertex.glsl
